Fixed grid on portfolio page, added second row of ul's in section b to split up the projects. Dimmed the background for easier readability

--- a/contact.css
+++ b/contact.css
@@ -110,6 +110,17 @@ i {
 	margin-right: 2px;
 }
 
+footer {
+	padding: 10px;
+	font-family: "Times New Roman", Times, serif;
+	text-align: center;
+	text-shadow: 1px 1px black;
+	display: block;
+	background-color: rgb(0, 0, 0.8, 0.6);
+	display: grid;
+	grid-template-columns: 1fr;
+}
+
 /* Large screens */
 @media (min-width: 700px) {
 	.wrapper {
